--- a/Fight/后端.md
+++ b/Fight/后端.md
@@ -86,6 +86,10 @@ SSO认证过程：
 
 使用302的潜在风险：一、A暂时重定向到B，搜索引擎虽然抓取的是B内容，但是实际收录的A的网址，这导致A蹭了B的热度，搜索排名上升；二、A自己的内容很烂，就重定向到B，相当于于空手套白狼。
 
+#### SSL(Secure Sockets Layer)
+
+SSL是Netscape公司提出的安全协议，利用数据加密、身份验证和消息完整性验证机制，为HTTP传输提供安全性保证。
+
 ## 其他
 
 ### 密码
