--- a/Fight/后端.md
+++ b/Fight/后端.md
@@ -86,9 +86,41 @@ SSO认证过程：
 
 使用302的潜在风险：一、A暂时重定向到B，搜索引擎虽然抓取的是B内容，但是实际收录的A的网址，这导致A蹭了B的热度，搜索排名上升；二、A自己的内容很烂，就重定向到B，相当于于空手套白狼。
 
-#### SSL(Secure Sockets Layer)
+### SSL(Secure Sockets Layer)
 
 SSL是Netscape公司提出的安全协议，利用数据加密、身份验证和消息完整性验证机制，为HTTP传输提供安全性保证。
+
+### TCP滑动窗口协议
+
+含义：规定TCP传输过程一次发送多少个包，滑动窗口协议是在TCP协议中使用的。
+
+特性：滑动窗口大小在TCP三次握手后进行协商，传输过程中包按顺序发送并确认后窗口才向后滑动。滑动窗口协议解决了网络传输不可靠的问题，如丢包、重复包、乱序。
+
+原理：
+
+数据包分为四类：已发送、已发送未确认、允许发送未发送、不可发送。发送方和接收方分别维护一个缓冲区，即窗口。缓冲区内的包将按顺序发送并按顺序确认。
+
+正常情况下，当收到缓冲区第一个数据包的ACK时窗口向后滑动一个位置，新的数据包放入缓冲区准备发送。
+
+如果丢包，缓冲区第一个数据包在**超时重传**机制下会重新发送一次，在等到ACK后再把缓冲区剩下的数据包也发出去，同时窗口后移一位。
+
+### TCP慢启动
+
+慢启动是拥塞控制的手段之一，通过设置一个**拥塞窗口(cwnd)**，从而避免大包积压在拥塞的节点。
+
+过程：对于一个刚建立的链接，在三次握手期间接收方通告自己的**接收窗口(rwnd)**，发送方通告自己的**拥塞窗口(cwnd)**，拥塞窗口的初始值通常为4个TCP段，发送端取`min(rwnd, cwnd)`作为发送方的滑动窗口大小，在发送完4个段后拥塞窗口增大一点，之后每次传输完部分数据，拥塞窗口就增大一点。这就是慢启动的过程，尽管带宽足够大仍然受慢启动的影响，在新连接的流量被限制。
+
+TCP的另一机制叫**SSR(Slow-StartRestart)慢启动重启**：在连接空闲一定的时间后重置连接的拥塞窗口。
+
+### HTTP keep-alive
+
+http的keep-alive机制用于延长tcp的连接状态，从最后一次相应结束开始计时keep-alive时间长度，之后如果没有再收到消息将主动发送[FIN, ACK]。tcp连接的双方都有http keep-alive计时，谁时间短谁就先发出关闭消息。
+
+http的keep-alive机制从http 1.1才出现，默认为keep-alive连接。在http 1.0之前每次发送完数据就会断开tcp连接，导致tcp连接的使用非常低效。在keep-alive机制下一个tcp连接能传多个数据。
+
+### TCP keep-alive
+
+有别于HTTP keep-alive，TCP的keep-alive存在的意义是检测对方是否还在。TCP的keep-alive机制有三个参数：闲置时间、侦测包发送时间间隔、侦测包发送次数。在最后一次双方交互数据后开始计时闲置时间，之后如果没有新的交互数据，就会发送侦测包看看对方的回应，如果没有回应就在一定时间间隔后再次发送，总共发送一定次数的侦测包，最终因为无回应而主动关闭TCP连接。
 
 ## 其他
 
